<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Theory Test Geo</string>
    <string name="exam_name">sagamocdo kiTxvari</string>
    <string name="signslist_name">sagzao niSnebi</string>
    <string name="main_title">sagamocdo testebi mZRolebisTvis</string>
    <string name="button_test">testireba</string>
    <string name="button_signs">sagzao niSnebi</string>
    <string name="button_laws">kanonmdebloba</string>
    <string name="dro_text">dro: </string>
    <string name="question_n">kiTxva </string>
    <string name="correct_n">swori pasuxebi:</string>
    <string name="mistakes_n">mcdari pasuxebi:</string>
    <string name="answer_is"> swori pasuxia:</string>
    <string name="full_answer">pasuxi vrclad</string>
    <string name="goto_main">mTavari</string>
    <string name="but_close_alert_dia">daxurva</string>
    <string name="but_forward">win</string>
    <string name="exam_success">Tqven warmatebiT CaabareT gamocda</string>
    <string name="exam_failure">Tqveni gamocda dasrulda warumateblad, gamocdis Casabareblad 30 wuTSi sworad unda gepasuxaT 27 SekiTxvisTvis mainc</string>
    <string name="full_answer_desc">pasuxi kiTxvaze</string>
    <string name="but_try_again">daiwye Tavidan</string>
    <string name="exam_type_1">sagamocdo kiTxvari</string>
    <string name="exam_desc_1">gamocda Sedgeba 30 kiTxvisgan (TiTo kiTxva TiTo Temidan). gamocdis warmatebiT Casabareblad 30 wuTSi sworad unda upasuxoT aranakleb 27 kiTxvisa</string>
    <string name="exam_type_2">yvela bileTi</string>
    <string name="exam_desc_2">airCieT kategoria da upasuxeT yvela kiTxvas arCeuli kategoriidan</string>
    <string name="test_cats_title">sagamocdo kategoriebi</string>
    <string name="cat_test_complete">testi dasrulebulia</string>
    <string name="but_next_cat">Semdegi kategoria</string>
    <string name="about_title">aplikaciis Sesaxeb</string>
    <string name="about_main">aplikacia moicavs marTvis mowmobis Teoriuli gamocdis 1025 SekiTxvas, saqarTvelos kanonmdeblobas sagzao moZraobis wesebis Sesaxeb, aseve yvela sagzao niSnis daniSnulebis aRweras</string>
    <string name="about_author">aplikacia Seqmnilia aleqsandre gedevaniSvilis mier. el. fosta:</string>
    <string name="about_email">sandro.gedevanishvili@gmail.com</string>
    <string name="report_but">daareporte Secdoma</string>
    <string name="yes_but">diax</string>
    <string name="no_but">ara</string>
    <string name="report_but_desc">Tu Tqven TvliT rom am SekiTxvaze programaSi miTiTebuli pasuxi mcdaria, gTxovT SeatyobinoT programis avtors "diax" Rilakis daWeriT. gsurT Setyobinebis gagzavna?</string>
    <string name="report_success">Tqveni SeniSvna gagzavnilia programis avtorTan</string>
    <string name="report_error">kavSiris problema. statusi: </string>
    <string name="report_error_2">serverTan dakavSireba ver moxerxda</string>
    <string name="report_wait">Please wait...</string>
</resources>
