<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/exam_area"
        style="@style/mainbg"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="6" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/large_logo"
                style="@style/largeiconimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@raw/large_icon" />

            <TextView
                android:id="@+id/about_main_block"
                style="@style/about_main_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_main" />

            <TextView
                android:id="@+id/about_author_block"
                style="@style/about_author_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_author" />

            <TextView
                android:id="@+id/about_email_block"
                style="@style/about_email_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="sendEmailToAuthor"
                android:text="@string/about_email" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="6sp" >

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
            android:id="@+id/ad_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-4603479470137694/4222802162" />
    </LinearLayout>

</LinearLayout>